@@ -8,6 +8,10 @@
     Manual */
 /** \page changes Changes
 \section vercvs CVS Version
+
+2006 January 16:
+- bug fix: litesql-gen did not create correct SQL schema for backends with auto incrementing primary key fields (mysql, sqlite3)
+
 2006 January 14:
 - bug fix: litesql-gen did not sort objects of relation tags and this resulted to broken relation table names
 
